# table-format

./: '  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
src/: content.rs  content_iterator.rs  data_item.rs  data_source.rs  lib.rs  table.rs  table_data_source.rs  vec_data_source.rs
src/content/: content_style.rs
src/table/: border.rs  cell.rs  column_break.rs  line.rs  row.rs  table_cell.rs  table_column.rs  table_row.rs
